# kivy_datpt02

./: .dockerignore  .env.sample  .gitignore  .gitlab-ci.yml  .pylintrc  Dockerfile  LICENSE  README.md  alembic.ini  build.bat  config.ini.sample  delete_setting.ini.sample  docker-compose.yml  docker_setup.bat  evs-ui.spec  main.py  pyproject.toml  requirements.txt  run_encrypt.bat  setup.bat  setup.py
.github/workflows/: run.yml
app/: env.py  ui.kv  ui.py
app/libs/constants/: colors.py  default_values.py
app/libs/language/: strings_ja.json  strings_vi.json
app/libs/widgets/: __init__.py  components.kv  components.py  cursor_manager.py  hover_behavior.py
app/pipeline/: pipe_client.py  server_manager.py
app/screen/KivyModule/: A_SensorSettingsScreen.kv  B_DataGenerationScreen.kv  B_WorkConfigScreen.kv  C_DataSelectionScreen.kv  C_ModelTrainingScreen.kv  C_TrainingResultsScreen.kv  D_AIDetectionExecutionScreen.kv  D_DetectionResultsScreen.kv  E_IniSettingsScreen.kv  E_SystemSettingsScreen.kv  WelcomeScreen.kv
app/services/: __init__.py  alignment_images.py  app_logs.py  dataset_images.py  datasets.py  detection_results.py  generate_datas.py  sensor_settings.py  system_config.py  trained_models.py  work_configs.py
app/utils/: log_base.py  paths.py  single_instance.py
db/: __init__.py  base.py  engine.py  session.py
db/alembic/: env.py
db/models/: __init__.py  alignment_images.py  app_logs.py  dataset_images.py  datasets.py  detection_results.py  generate_datas.py  sensor_settings.py  system_config.py  trained_models.py  work_configs.py
default_data/: default.bias  intrinsics.json  iphone.bias
kivy/uix/: textinput.py
scripts/: auto_cleaner.py
tests/: test_components.py  test_ui_a_1_sensor_settings_screen.py  test_ui_b_1_work_config_screen.py  test_ui_b_2_data_generation_screen.py  test_ui_c_1_data_selection_screen.py  test_ui_c_2_model_training_screen.py  test_ui_c_3_training_results_screen.py  test_ui_d_1_ai_detection_execution_screen.py  test_ui_d_2_detection_results_screen.py  test_ui_e_1_ini_settings_screen.py  test_ui_e_2_system_settings_screen.py  utils_build_translation_csv.py  utils_generate_database.py  utils_schedule_auto_cleaner.py
(+47 files in other folders)
