[project]
name = "2-source"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.16.4",
    "altgraph==0.17.4",
    "argopt==0.9.1",
    "astroid==3.3.11",
    "autopep8==2.3.2",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "cupy-cuda12x>=13.4.1",
    "dill==0.4.0",
    "docutils==0.21.2",
    "filetype==1.2.0",
    "freia>=0.2",
    "git-fame==3.1.1",
    "h5py>=3.14.0",
    "idna==3.10",
    "ipadic>=1.0.0",
    "isort==6.0.1",
    "jaconv>=0.4.0",
    "kivy==2.3.1",
    "kivy-deps-angle==0.4.0",
    "kivy-deps-glew==0.3.1",
    "kivy-deps-sdl2==0.8.0",
    "kivy-garden==0.1.5",
    "kornia>=0.8.1",
    "matplotlib==3.9.0",
    "mccabe==0.7.0",
    "numba>=0.60.0",
    "numpy==1.26.4",
    "olefile==0.47",
    "onnx>=1.19.0",
    "onnxruntime==1.19.2",
    "open3d==0.18.0",
    "opencv-python>=4.11.0.86",
    "pandas==2.2.2",
    "pefile==2023.2.7",
    "pillow==11.3.0",
    "psutil>=7.1.0",
    "pycodestyle==2.14.0",
    "pycuda>=2025.1.2",
    "pygetwindow>=0.0.9",
    "pygments==2.19.2",
    "pyinstaller==6.16.0",
    "pyinstaller-hooks-contrib==2025.9",
    "pypiwin32==223",
    "pyserial>=3.5",
    "python-dotenv==1.1.1",
    "pywin32==310",
    "pywin32-ctypes==0.2.3",
    "pyyaml>=6.0.2",
    "requests==2.32.4",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "sqlalchemy>=2.0.41",
    "sudachidict-core>=20250515",
    "sudachipy>=0.6.10",
    "tabulate==0.9.0",
    "tensorboard>=2.20.0",
    "tensorrt-cu12==10.13.3.9",
    "timm>=1.0.16",
    "tomlkit==0.13.3",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "urllib3==2.5.0",
    "pytest==7.0.0",
    "pyarmor>=9.2.3",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
